# code-kata

./: README.md
c/: CMakeLists.txt  README.md  kata02-binary-search.c  kata02-binary-search.h  kata02-binary-search_test.c  log.c  log.h  now.c  now.h
c-sharp/: README.md  c-sharp.sln
c-sharp/Kata02-BinarySearch/: Kata02-BinarySearch.csproj
c-sharp/Kata02-BinarySearch.Test/: BinarySearchTests.cs  Kata02-BinarySearch.Test.csproj
c-sharp/src/: BinarySearch.cs  src.csproj
c-sharp/tests/: tests.csproj
clojure/: README.md  lein.bat  project.clj
cpp/: CMakeLists.txt  README.md
cpp/src/: kata02_binary_search.cpp  kata02_binary_search.h
cpp/test/: CMakeLists.txt  README.md  kata02_binary_search_test.cpp  test_main.cpp
elixir/: README.md  mix.exs
elixir/lib/: Kata02_BinarySearch.ex
elixir/test/: Kata02_BinarySearch_test.exs
erlang/: README.md
erlang/src/: kata02_binary_search.erl  kata02_binary_search_test.erl
go-lang/: README.md  kata02_binary_search.go  kata02_binary_search_test.go
java/: .editorconfig  .gitignore  build.gradle
kotlin/: .editorconfig  build.gradle
node-js/: .eslintrc.yml  .gitignore  README.md  package-lock.json  package.json
node-js/src/: kata02-binary-search.js
node-js/test/: kata02-binary-search.test.js
php/: .gitignore  README.md
php/src/: BinarySearch.php
php/tests/: BinarySearchTest.php
python/: README.md
reactive-java/: .editorconfig  README.md  build.gradle
ruby/: .editorconfig  README.md  ruby.gemspec
rust/: Cargo.toml
scala/: .editorconfig  build.sbt
typescript/: README.md  package.json
(+43 files in other folders)
